--- a/.github/workflows/fishing-alerts.yml
+++ b/.github/workflows/fishing-alerts.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Upload state file (optional)
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Updated to v4
         with:
           name: state
           path: state.json
